# todo-practice-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
app/: configurations.py  main.py  usecases.py
app/adapters/: chromadb_adapter.py  openai_adapter.py
app/api/: dependencies.py  routers.py
app/core/: models.py  ports.py
test/: test_e2e.py
